# jarvis

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  pytest_simple.ini  requirements.in  requirements.txt  setup.py
.claude/: settings.local.json
.github/: auto-assign.yml  dependabot.yml  pull_request_template.md  test-ci.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-update.yml  pr-validation.yml  release.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
config/: config.py  config.yaml  jarvis.yaml  prometheus.yml
config/alerts/: agi_alerts.yml
core/: base_agent.py  base_memory.py  base_protocol.py  base_tool.py  celery.py
core/config/: README.md  __init__.py  loader.py  manager.py  schema.py  utils.py
core/distributed/: __init__.py  base_worker.py  coordinator.py  task_queue.py  worker_pool.py
core/monitoring/: README.md  __init__.py  logger.py  metrics.py  monitoring.py
core/scheduling/: README.md  __init__.py  exceptions.py  monitor.py  queue.py  scheduler.py  task.py
docs/: README.md
docs/architecture/: README.md
examples/: config_demo.py  monitoring_demo.py  scheduling_demo.py
modules/memory/sensory/: base.py
modules/reasoning/coordinator/: base.py
modules/reasoning/system1/: base.py
modules/reasoning/system2/: base.py
tests/: conftest.py  test_config.py  test_core.py  test_logger.py  test_monitoring.py  test_scheduling.py
tests/integration/: test_celery_integration.py  test_distributed_integration.py
tests/performance/: test_memory_performance.py
tests/unit/: test_base_agent.py  test_base_memory.py  test_base_protocol.py  test_base_tool.py  test_distributed_base_worker.py  test_distributed_coordinator.py  test_distributed_task_queue.py
